<resources>
    <string name="app_name">LaLigaSantander</string>
    <string name="club_name">club_name</string>
    <string name="detail">detail</string>
    <string name="about">about</string>
    <string name="profile_name">Hilmy Saeful Fatah</string>
    <string name="profile_location">Depok</string>
    <string name="ground_title">Ground</string>
    <string name="ground_content">ground_content</string>
    <string name="coach_title">Head Coach</string>
    <string name="coach_content">coach_content</string>
    <string name="about_title">About Club</string>
    <string name="about_content">about_content</string>
</resources>